[package]
name = "move-to-ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
clap = { version = "3.1.8", features = ["derive"] }

move-core-types = { path = "../../move-core/types" }
move-compiler = { path = "../../move-compiler" }
move-ir-types = { path = "../../move-ir/types" }
move-package = { path = "../move-package" }
move-command-line-common = { path = "../../move-command-line-common" }

[features]
default = ["move-core-types/address32"]
